fixed a few layout bugs

--- a/app/views/home/_welcome.html.haml
+++ b/app/views/home/_welcome.html.haml
@@ -1,7 +1,7 @@
 %h2 What is this thing?
 #boy-gamer.photo.float-right
   = image_tag 'boy-playing-video-game.jpg'
-%p Take a look at Tommy, on the right.  Is he enjoying himself?  Is that the best use of his time?  As a 10 year old boy, you'd probably say, "yeah!"  As a parent, you'd probably say, "I'm not so sure..."
+%p Take a look at Tommy.  Is he enjoying himself?  Is that the best use of his time?  As a 10 year old boy, you'd probably say, "yeah!"  As a parent, you'd probably say, "I'm not so sure..."
 %p
   What if you 
   %em could be sure?
