--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,25 +1,26 @@
-%h1
-  Welcome to Educentives
-%p
-  - if current_user
-    - if current_user.try(:person).try(:student).try(:plans).present?
-      .record-cntr
-        = render @goals
+%div{:style => 'min-height:300px;'}
+  %h1
+    Welcome to Educentives
+  %p
+    - if current_user
+      - if current_user.try(:person).try(:student).try(:plans).present?
+        .record-cntr
+          = render @goals
+      - else
+        Nice to see you here.  I can't wait to get started!  Its simple:
+        = link_to image_tag('lambo.png', :style => 'opacity:0.3;position:absolute;right:40px;top:160px;'), new_goal_path
+        %ul
+          %li
+            %b
+              = link_to 'Set your first Goal', goal_wizard_path
+            %small (we'll set a date later)
+          %li Find something appropriate to earn as a reward for all that hard work
+          %li Break it up into achievable milestones 
+          %li Commit to your plan and start checking things off!
     - else
-      Nice to see you here.  I can't wait to get started!  Its simple:
-      = link_to image_tag('lambo.png', :style => 'opacity:0.3;position:absolute;right:40px;top:160px;'), new_goal_path
-      %ul
-        %li
-          %b
-            = link_to 'Set your first Goal', goal_wizard_path
-          %small (we'll set a date later)
-        %li Find something appropriate to earn as a reward for all that hard work
-        %li Break it up into achievable milestones 
-        %li Commit to your plan and start checking things off!
-  - else
-    Please 
-    = link_to "Sign up", signup_path 
-    or
-    = link_to "Log in", login_path 
-    = render "welcome" 
+      Please 
+      = link_to "Sign up", signup_path 
+      or
+      = link_to "Log in", login_path 
+      = render "welcome" 
 
