--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -34,6 +34,7 @@ body {
 @gridGutterWidth1200: 20px;
 @gridGutterWidth768:  10px;
 
+
 // Base class
 .well {
   padding: 8px;
@@ -41,6 +42,11 @@ body {
 }
 
 @media (max-width: 767px) {
+  body {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
   [class*="span"] {
     margin-left: 0px;
   }
