--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -34,65 +34,29 @@ body {
 @gridGutterWidth1200: 20px;
 @gridGutterWidth768:  10px;
 
-
-// Base class
-.well {
-  padding: 8px;
-  .border-radius(8px);
-}
-
-@media (max-width: 767px) {
+@media (max-width: 767px){
   body {
     padding-left: 5px;
     padding-right: 5px;
   }
-
-  [class*="span"] {
-    margin-left: 0px;
-  }
 }
-
-@media (min-width: 768px) and (max-width: 979px) {
-  [class*="span"] {
-    margin-left: 3px;
-  }
-  .span3 {
-    width: 158px;
-  }
-
-}
-
-@media (min-width: 980px) and (max-width: 1199px) {
-  [class*="span"] {
-    margin-left: 8px;
-  }
-  .span3 {
-    width: 188px;
-  }
-  .content{
-    margin-top:40px;
-  }
-}
-
-@media (min-width: 1200px){
-  [class*="span"] {
-    margin-left: 10px;
-  }
-  .row{
-     margin-left: -15px;
-  }
-  .span3 {
-    width: 256px;
-  }
-  .content{
-    margin-top:40px;
-  }
-
-}
-
 
 .navbar{
   border-bottom: solid 1px #64C1E6;
+}
+
+.well{
+  border-radius:8px;
+  padding:8px;
+}
+
+.navbar .btn-navbar {
+}
+
+@media (max-width: 979px){
+  .navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
+    padding: 19px 19px 0 5px;
+  }
 }
 
 .navbar-inner{
