--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -16,6 +16,7 @@ body {
 }
 
 
+
 h1, h2, h3, h4, h5{
   background: url("/assets/background/linen-tile-trans.png") repeat scroll right top #F8F8F8;
   border-bottom: 1px solid #FFFFFF;
@@ -65,32 +66,7 @@ input[type="color"],
   border-radius: 10px;
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
   padding: 3px;
-}
-
-@media (max-width: 480px){
-  #content-wrapper{
-    margin-right:-15px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 979px) {
-  #content-wrapper{
-    padding:3px;
-  }
-}
-
-@media (min-width: 980px) and (max-width: 1199px) {
-  #content-wrapper{
-    padding:9px;
-    margin-top: 30px;
-  }
-}
-
-@media (min-width: 1200px){
-  #content-wrapper{
-    padding:10px;
-    margin-top: 30px;
-  }
+  margin: 10px;
 }
 
 #content-header{
@@ -120,6 +96,42 @@ input[type="color"],
 	position: relative;
   float: left;
 }
+
+
+@media (max-width: 480px){
+  #content-wrapper{
+  }
+
+  #logo{
+  	width: 101px;
+    background: url(/assets/educentives-small.png) no-repeat;
+    height: 36px;
+    min-height: 36px;
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+  #content-wrapper{
+    padding:3px;
+  }
+}
+
+@media (min-width: 980px) and (max-width: 1199px) {
+  #content-wrapper{
+    padding:9px;
+    margin-top: 45px;
+  }
+}
+
+@media (min-width: 1200px){
+  #content-wrapper{
+    padding:10px;
+    margin-top: 45px;
+  }
+}
+
+
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
