fixed home page float clear and added some stylish

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -45,9 +45,12 @@ body {
   border-bottom: solid 1px #64C1E6;
 }
 
-.well{
-  border-radius:8px;
-  padding:8px;
+.well:last-child{margin-bottom:0}
+@media (min-width: 980px){
+  .well{
+    border-radius:8px;
+    padding:8px;
+  }
 }
 
 .navbar .btn-navbar {
