--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -22,5 +22,5 @@
       = link_to "Sign up", signup_path 
       or
       = link_to "Log in", login_path 
-      = render "welcome" 
-
+      = render "welcome"
+  .clearer
