--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
               <h3>Sidebar</h3>
               <ul class="nav nav-list">
                 <li class="nav-header">Sidebar</li>
-                <li><%= link_to "Goals", :controller => :goals, :action => :index %></li>
+                <li><%= link_to content_tag(:i, "", :class => 'icon-caret-right') + "Goals", :controller => :goals, :action => :index %></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span3-->
