--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
 
           <div id="authentication">
             <% if current_user %>
-              &nbsp;Logged in as <%= current_user.username %>
+              &nbsp;Hi, <%= current_user.username.titlecase %>
               <%= link_to "Log out", logout_path %>
             <% else %>
               <%= link_to "Sign up", signup_path %> or
