--- a/app/views/milestones/_milestone.html.haml
+++ b/app/views/milestones/_milestone.html.haml
@@ -1,5 +1,5 @@
 = content_tag_for( :div, milestone, :class => (milestone.completed_at ? 'record completed' : 'record todo')) do
-  = link_to(milestone.title, milestone, :class => 'record-title')
+  = link_to(milestone.title, edit_milestone_path(milestone), :class => 'record-title')
   .record-row.target
     %span.record-label point value 
     %span.record-value=milestone.point_value||'n/a'
