--- a/app/views/assessments/_form.html.haml
+++ b/app/views/assessments/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for([assessment.goal.plan, assessment.goal, assessment], :remote => true) do |f|
+= form_for([assessment.goal, assessment], :remote => true) do |f|
   - if assessment.errors.any?
     #error_explanation
       %h2
