--- a/app/views/goals/_form_lite.html.haml
+++ b/app/views/goals/_form_lite.html.haml
@@ -24,9 +24,8 @@
       = hidden_field_tag :user_context, user_context
 
     .actions
-      %a#submit_form.edu-button.a.record-row-left{ :rel => "nofollow",
+      %a#submit_form.edu-button.a.record-row-left.icon-play{ :rel => "nofollow",
                                 :href => new_goal_path} 
-        %span.icon-32.a.record-row-white-32 
         Create Your Goal
       
     .clearer
