--- a/app/assets/stylesheets/milestones.css.scss
+++ b/app/assets/stylesheets/milestones.css.scss
@@ -1,4 +1,9 @@
 // Place all the styles related to the Milestones controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#milestones .record{cursor: move;}
+#milestones .record{
+  cursor: move;
+}
+.milestone.record{
+  border-radius: 5px;
+}
