--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
 
           <div class="nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Goals", :controller => :goals, :action => :index %></li>
+              <li><%= link_to "My Goals", :controller => :goals, :action => :index %></li>
               <li><%= link_to "About Educentives", about_path %><li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -95,9 +95,9 @@
           </div>
           <div class="span3">
             <div class="well sidebar-nav">
-              <h3>Sidebar</h3>
+              <h3>Quick Nav</h3>
               <ul class="nav nav-list">
-                <li class="nav-header">Sidebar</li>
+                <li class="nav-header">My Stuff</li>
                 <li><%= link_to content_tag(:i, "", :class => 'icon-caret-right') + "Goals", :controller => :goals, :action => :index %></li>
               </ul>
             </div><!--/.well -->
