--- a/app/views/rewards/_form.html.haml
+++ b/app/views/rewards/_form.html.haml
@@ -38,7 +38,6 @@
             $('form').submit();
           });
         });
-      %a#submit_form.edu-button.a.record-row-left{ :rel => "nofollow", :href => new_goal_path} 
-        %span.icon-32.a.record-row-white-32 
+      %a#submit_form.edu-button.a.record-row-left.icon-play{ :rel => "nofollow", :href => new_goal_path} 
         Create Your Reward
 
