--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -68,16 +68,24 @@ body {
   }
 }
 
-.navbar-inner{
-  background-image: -moz-linear-gradient(top, rgba(255,0,0,0.5), rgba(105,0,0,0.5));
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, rgba(206,240,255,0.8), rgba(115,150,215,0.5));
-  background-image: -webkit-linear-gradient(top, rgba(246,245,255,1.0), rgba(0,0,0,0.5));
-  background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
-  background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
-  background-color:transparent;
+.nav-gradient(@color: #F5F5F5, @start: #EEE, @stop: #FFF) {
+  background: @color;
+  background: -webkit-gradient(linear,
+                               left top,
+                               left bottom,
+                               color-stop(0, @start),
+                               color-stop(1, @stop));
+  background: -ms-linear-gradient(top,
+                                  @start,
+                                  @stop);
+  background: -moz-linear-gradient(center top,
+                                   @start 0%,
+                                   @stop 100%);
+  filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",@start,@stop));
+}
 
+.navbar-inner{
+  .nav-gradient(transparent, rgba(246,245,255,1.0), rgba(0,0,0,0.5));
 }
 
 .nav-collapse.in.collapse .nav > li > a, .nav-collapse .dropdown-menu a{
