--- a/app/views/goals/_form_lite.html.haml
+++ b/app/views/goals/_form_lite.html.haml
@@ -22,7 +22,16 @@
       = f.label :long_description, "Description"
       = f.text_area :long_description
       = hidden_field_tag :user_context, user_context
-
+    %h3
+      Does this goal involve pursuing performance scores?
+      %a.vtoggle-trigger(data-toggle-el="assessments-track-panel") 
+        %span +
+      = render :partial => '/shared/popbox', :locals => {:pop_content => 'reading a book is a milestone but reading 12 pages per day might be a target score.  You might want to sink 10 free throws per minute so you may want to record where you are and what score you achieve each session.', :pop_title => 'Assessments', :pop_placement => 'left'}, :style => 'float:left;'
+    #assessments-track-panel.record-cntr.load-hidden
+      = f.label :target_score
+      = f.text_field :target_score
+      = f.label :target_label
+      = f.text_field :target_label
     .actions
       %a#submit_form.edu-button.a.record-row-left.icon-play{ :rel => "nofollow",
                                 :href => new_goal_path} 
