--- a/app/views/goals/show.html.haml
+++ b/app/views/goals/show.html.haml
@@ -6,10 +6,10 @@
 .record-cntr
 
   %em The Journey
-  .progress.progress-striped
-    .bar.bar-success{ :style => "width: #{number_to_percentage(@goal.percent_complete, :precision => 1)}"}= "#{number_to_percentage(@goal.percent_complete, :precision => 0)} complete"
-    .bar.bar-info{ :style => "width: #{number_to_percentage(100 - @goal.percent_complete, :precision => 1)}"}
-
+  - if @goal.percent_complete.present?
+    .progress.progress-striped
+      .bar.bar-success{ :style => "width: #{number_to_percentage(@goal.percent_complete, :precision => 1)}"}= "#{number_to_percentage(@goal.percent_complete, :precision => 0)} complete"
+      .bar.bar-info{ :style => "width: #{number_to_percentage(100 - @goal.percent_complete, :precision => 1)}"}
 
   = render @goal
 
