--- a/app/views/content/about.html.haml
+++ b/app/views/content/about.html.haml
@@ -15,7 +15,7 @@
 %p
   A
   %i milestone
-  breaks up a larger goal into smaller pieces that easier to swallow.  They make an imposing endeavor less so and allow you to measure intermediate progress.
+  breaks up a larger goal into smaller pieces that are easier to swallow.  They make an imposing endeavor less so and allow you to measure intermediate progress.
 %p Each milestone will be easier to imagine, plan and complete.  As you complete milestones, you will see your trend of progress toward your goal.  Along the way, you will see how quickly you are travelling toward success.  You will also see the work remaining falling away.
 %h2 Deadlines
 %p
