--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -84,4 +84,18 @@ body {
   background-color: #dEe0eF;
 }
 
+.btn-primary {
+  background-color: hsl(124, 90%, 25%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0ced1b", endColorstr="#06790e");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#0ced1b), to(#06790e));
+  background-image: -moz-linear-gradient(top, #0ced1b, #06790e);
+  background-image: -ms-linear-gradient(top, #0ced1b, #06790e);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0ced1b), color-stop(100%, #06790e));
+  background-image: -webkit-linear-gradient(top, #0ced1b, #06790e);
+  background-image: -o-linear-gradient(top, #0ced1b, #06790e);
+  background-image: linear-gradient(#0ced1b, #06790e);
+  border-color: #06790e #06790e hsl(124, 90%, 19%);
+}
+
 
