--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,7 +23,7 @@
         <%= f.password_field :password_confirmation %>
       </div>
 
-      <div class="actions"><%= f.submit %></div>
+      <div class="actions"><%= f.submit :class => 'btn-large btn-primary pull-right' %></div>
     </fieldset>
   <% end %>
 </div>
