--- a/app/views/shared/_popbox.html.haml
+++ b/app/views/shared/_popbox.html.haml
@@ -3,5 +3,6 @@
   :rel => "popover",
   :'data-content' => "#{pop_content}",
   :'data-original-title' => "#{pop_title}",
-  :'data-placement' => "#{popover_placement}"}
+  :'data-placement' => "#{popover_placement}",
+  :'data-container' => "body"}
  
