--- a/app/views/goals/show.html.haml
+++ b/app/views/goals/show.html.haml
@@ -24,7 +24,8 @@
 
 #milestones.record-cntr(data-update-url="#{sort_milestones_url}")
   = render @goal.milestones 
-
+  - if @goal.milestones.empty?
+    No Milestones.  Create some below!
 %h3
   Add a Milestone
   %a.vtoggle-trigger(data-toggle-el="milestone-add-panel") 
